fixed playlist not updating dnd state, fixed css not covering whole page

--- a/src/styles/Components.module.css
+++ b/src/styles/Components.module.css
@@ -56,6 +56,7 @@
   background-color: #282c34;
   color: white;
   height: 100%;
+  width: 100%;
 }
 
 .MainDivFlex > *:first-child {
